# smart_community_management

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  qt_style_fixes.md  split_property_pages.py
.trae/diagnoses/: 2026061801.md  2026061802.md  2026061803.md  2026061804.md  2026062101.md  2026062102.md  2026062103.md  2026062104.md  2026062105.md  2026062201.md  2026062202.md
.trae/rules/: project_rules.md
.trae/specs/: database_design.md  functional_spec.md  priority_analysis.md  qt_architecture.md  tasks.md  use_cases.md  系统全面完善方案_task-7aa.md
resources/: qt_modern_ui_guide.md  resources.qrc  style.qss
sql/: schema.sql
src/: PagesCommon.h  main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/dialogs/: ChangePasswordDialog.cpp  ChangePasswordDialog.h  ProfileDialog.cpp  ProfileDialog.h  WorkOrderDetailActions.cpp  WorkOrderDetailDialog.cpp  WorkOrderDetailDialog.h
src/models/: AiModels.h  BaseModels.h  CmConstants.h  CmModels.h  Constants.h  EnumHelper.h  EvModels.h  GeConstants.h  GeModels.h  KfModels.h  Models.h  NtConstants.h  NtModels.h  OcConstants.h  OcModels.h  SvConstants.h  SvModels.h  SysConstants.h  SysModels.h  WoConstants.h  WoModels.h
src/pages/: ArchivePage.cpp  BasePage.h  DashboardPage.cpp  DashboardTodoMessagePage.cpp  EventPage.cpp  EventPage.h  EventPageActionDialog.cpp  EventPageEditDialog.cpp  EventPageNewDialog.cpp  GovernancePage.cpp  MessageCenterPage.cpp  PageFactory.cpp  PageFactory.h  PropertyPage.cpp  ReportPage.cpp  ReportPageHelper.h  ServicePage.cpp  SystemPage.cpp  SystemPageHelpers.cpp  SystemPageHelpers.h  TodoCenterPage.cpp  _new_decls.txt  buildArchiveEstate.cpp  buildArchiveFacility.cpp  buildArchiveGrid.cpp  buildArchiveHouse.cpp  buildArchiveOrg.cpp  buildArchiveResident.cpp  buildArchiveSpecial.cpp  buildArchiveVehicle.cpp  buildGovernanceAssessment.cpp  (+27 more)
tests/: CMakeLists.txt  test_core_logic.cpp
(+64 files in other folders)
